--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -10,7 +10,7 @@ BINFILES = align-equal align-equal-compiled acc-tree-stats \
         add-self-loops convert-ali \
         compile-train-graphs compile-train-graphs-fsts \
         make-pdf-to-tid-transducer make-ilabel-transducer show-transitions \
-        ali-to-phones ali-to-post weight-silence-post acc-lda est-lda \
+        ali-to-phones ali-to-hmmstate ali-to-post weight-silence-post acc-lda est-lda \
         ali-to-pdf est-mllt build-tree build-tree-two-level decode-faster \
         decode-faster-mapped vector-scale copy-transition-model rand-prune-post \
         phones-to-prons prons-to-wordali copy-gselect copy-tree scale-post \
