--- a/src/nnetbin/Makefile
+++ b/src/nnetbin/Makefile
@@ -11,6 +11,7 @@ BINFILES = nnet-train-frmshuff \
         nnet-train-mmi-sequential \
         nnet-train-mpe-sequential \
         nnet-train-lstm-streams nnet-train-blstm-streams \
+		nnet-train-mse-tgtmat-frmshuff_blaise \
         rbm-train-cd1-frmshuff rbm-convert-to-nnet \
         nnet-forward nnet-copy nnet-info nnet-concat \
         transf-to-nnet cmvn-to-nnet nnet-initialize \
